see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Jan-2012 Jean-Marie Simonet
 # [#27579] Smart Search search term highlighting not working. Thanks Rouven and Michael.
 # [#27540] Finder / Smart Search selectbox order. Thanks Brian
 # [#27573] Incorrect route created by Smart Search contact plug-in. Thanks Michael
 # [#27543] Double Slashes with CodeMirror use. Thanks Jan and Andrea
 # [#27541] trouble with broken Intro image. Thanks Andrea
 # [#23644] When adding a new item from a category view that category should be selected. Thanks John
 # [#27501] Bluestork template image error. Thanks Andrea

05-Jan-2012 Jean-Marie Simonet
 $ Adding new installation language mn-MN

04-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files: gl-ES, sk-SK
 # [#27595] *regression: Multilanguage template styles do not display flags when homes set for a Content language
 #$ [#27556] * Smart Search ALL language displays as *. Thanks Dennis
 $ [#27594] UTF-8 consistency. Thanks Brian
 #$ [#27572] Give contact email label its own string. Thanks Andrea.
 $ [#27593] itemID consistency.Thanks Brian
 $ Adding new installation language ko-KR

03-Jan-2012 Mark Dexter
 # [#27608] Usernotes had db specific query
 # [#27590] br fixes

03-Jan-2012 Christophe Demko
 + [#27221] Improvements for batch processing (Michael Babker)

31-Dec-2011 Jean-Marie Simonet
 $ Corrected plg_system_languagecode.ini string typo.
 # [#27571] Missing or incorrect help screen key references. Thanks Chris.
 $ [#27570] Link in Plug-in Manager: System - Language Code. Thanks Brian

30-Dec-2011 Jean-Marie Simonet
 # Fixing again [#27520] lost when committing [#27498]